==> zephyrproject-rtos/zephyr/drivers/i2c/i2c_mspm0.c <==
#define DT_DRV_COMPAT ti_mspm0_i2c
#include <zephyr/kernel.h>
#include <zephyr/drivers/i2c.h>
#include <zephyr/pm/device.h>
#include <zephyr/pm/device_runtime.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/drivers/clock_control.h>
#include <zephyr/drivers/clock_control/mspm0_clock_control.h>
#include <soc.h>
#define LOG_LEVEL CONFIG_I2C_LOG_LEVEL
#include <zephyr/logging/log.h>
#include "i2c-priv.h"
#include <ti/driverlib/dl_i2c.h>
#include <ti/driverlib/dl_gpio.h>
#define TI_MSPM0_TARGET_TIMEOUT_50_MS 	(193)
#define TI_MSPM0_CONTROLLER_INTERRUPTS	\
	(DL_I2C_INTERRUPT_CONTROLLER_ARBITRATION_LOST |	\
	DL_I2C_INTERRUPT_CONTROLLER_NACK |	\
	DL_I2C_INTERRUPT_CONTROLLER_RXFIFO_TRIGGER |	\
	DL_I2C_INTERRUPT_CONTROLLER_RX_DONE | DL_I2C_INTERRUPT_CONTROLLER_TX_DONE \
	IF_ENABLED(CONFIG_I2C_CONTROLLER_TIMEOUT, (| DL_I2C_INTERRUPT_TIMEOUT_A)))
#define TI_MSPM0_TARGET_INTERRUPTS	\
	(DL_I2C_INTERRUPT_TARGET_RX_DONE | DL_I2C_INTERRUPT_TARGET_TXFIFO_EMPTY |	\
	DL_I2C_INTERRUPT_TARGET_START |	DL_I2C_INTERRUPT_TARGET_STOP	\
	IF_ENABLED(CONFIG_I2C_TARGET_TIMEOUT, (| DL_I2C_INTERRUPT_TIMEOUT_A)))

static void i2c_mspm0_isr(const struct device *dev)
{
	const struct i2c_mspm0_config *config = dev->config;
	struct i2c_mspm0_data *data = dev->data;

	switch (DL_I2C_getPendingInterrupt(config->base)) {
	/* controller interrupts */
	case DL_I2C_IIDX_CONTROLLER_RX_DONE:
		data->state = I2C_MSPM0_RX_COMPLETE;
		break;
	case DL_I2C_IIDX_CONTROLLER_TX_DONE:
		DL_I2C_disableInterrupt(config->base,
					DL_I2C_INTERRUPT_CONTROLLER_TXFIFO_TRIGGER);
		data->state = I2C_MSPM0_TX_COMPLETE;
		break;
	case DL_I2C_IIDX_CONTROLLER_RXFIFO_TRIGGER:
		if (data->state != I2C_MSPM0_RX_COMPLETE) {
			/* Fix for RX_DONE happening before the last RXFIFO_TRIGGER */
			data->state = I2C_MSPM0_RX_INPROGRESS;
		}
		/* Receive all bytes from target */
		while (DL_I2C_isControllerRXFIFOEmpty(config->base) != true) {
			if (data->count < data->msg.len) {
				data->msg.buf[data->count++] =
					DL_I2C_receiveControllerData(config->base);
			} else {
				/* Ignore and remove from FIFO if the buffer is full */
				DL_I2C_receiveControllerData(config->base);
			}
		}
		break;
	case DL_I2C_IIDX_CONTROLLER_TXFIFO_TRIGGER:
		data->state = I2C_MSPM0_TX_INPROGRESS;
		/* Fill TX FIFO with next bytes to send */
		if (data->count < data->msg.len) {
			data->count += DL_I2C_fillControllerTXFIFO(config->base,
								   &data->msg.buf[data->count],
								   data->msg.len - data->count);
		}
		break;
	case DL_I2C_IIDX_CONTROLLER_ARBITRATION_LOST:
	case DL_I2C_IIDX_CONTROLLER_NACK:
		if ((data->state == I2C_MSPM0_RX_STARTED) ||
		    (data->state == I2C_MSPM0_TX_STARTED)) {
			/* NACK interrupt if I2C Target is disconnected */
			data->state = I2C_MSPM0_ERROR;
		}

	/* Not implemented */
	case DL_I2C_IIDX_CONTROLLER_RXFIFO_FULL:
	case DL_I2C_IIDX_CONTROLLER_TXFIFO_EMPTY:
	case DL_I2C_IIDX_CONTROLLER_START:
	case DL_I2C_IIDX_CONTROLLER_STOP:
	case DL_I2C_IIDX_CONTROLLER_EVENT1_DMA_DONE:
	case DL_I2C_IIDX_CONTROLLER_EVENT2_DMA_DONE:
		break;
	/* target interrupts */
	case DL_I2C_IIDX_TARGET_START:
		if (k_sem_take(&data->i2c_busy_sem, K_NO_WAIT) != 0 && data->state == I2C_MSPM0_IDLE) {
			/* we do not have control of the peripheral. And it is not a restart. Some
			 * configuration or other function is making modifications
			 * to the peripheral so we must cancel the transaction. The
			 * only supported way to cancel the transaction is disabling
			 * the target peripheral entirely.
			 */
			DL_I2C_disableTarget(config->base);
			data->state = I2C_MSPM0_TARGET_PREEMPTED;
		} else {
			/* semaphore has successfully been obtained */
			data->state = I2C_MSPM0_TARGET_STARTED;

			/* Flush TX FIFO to clear out any stale data */
			DL_I2C_flushTargetTXFIFO(config->base);
		}
		break;
	case DL_I2C_IIDX_TARGET_RX_DONE:
		if (data->state == I2C_MSPM0_TARGET_STARTED) {
			data->state = I2C_MSPM0_TARGET_RX_INPROGRESS;
			if (data->target_callbacks->write_requested != NULL) {
#ifdef CONFIG_I2C_MSPM0_MULTI_TARGET_ADDRESS
				if(data->secondaryAddr != 0x00){
					data->target_config->address = DL_I2C_getTargetAddressMatch(config->base);
				}
#endif
				data->target_rx_valid = data->target_callbacks->write_requested(
					data->target_config);
			}
		}
		/* Store received data in buffer */
		if (data->target_callbacks->write_received != NULL) {
			uint8_t nextByte;

			while (DL_I2C_isTargetRXFIFOEmpty(config->base) != true) {
				if (data->target_rx_valid == 0) {
					nextByte =
						DL_I2C_receiveTargetData(config->base);
					data->target_rx_valid =
						data->target_callbacks->write_received(
							data->target_config, nextByte);

					if(data->target_rx_valid == 0){
						DL_I2C_setTargetACKOverrideValue(config->base, DL_I2C_TARGET_RESPONSE_OVERRIDE_VALUE_ACK);
					} else {
						DL_I2C_setTargetACKOverrideValue(config->base, DL_I2C_TARGET_RESPONSE_OVERRIDE_VALUE_NACK);
					}

				} else {
					/* Prevent overflow and just ignore data */
					DL_I2C_receiveTargetData(config->base);
					DL_I2C_setTargetACKOverrideValue(config->base, DL_I2C_TARGET_RESPONSE_OVERRIDE_VALUE_NACK);
				}
			}
		}

		break;
	case DL_I2C_IIDX_TARGET_TXFIFO_EMPTY:
		if(data->state == I2C_MSPM0_TARGET_STARTED) {
			/* First byte detected from a read operation. */
			data->state = I2C_MSPM0_TARGET_TX_INPROGRESS;
			if(data->target_callbacks->read_requested != NULL){
				uint8_t nextByte;
#ifdef CONFIG_I2C_MSPM0_MULTI_TARGET_ADDRESS
				if(data->secondaryAddr != 0x00){
					data->target_config->address = DL_I2C_getTargetAddressMatch(config->base);
				}
#endif
				data->target_tx_valid = data->target_callbacks->read_requested(
					data->target_config, &nextByte);
				if (data->target_tx_valid == 0) {
					DL_I2C_transmitTargetData(config->base, nextByte);
				} else {
					/* In this case, no new data is desired to be filled, thus
					* 0's are transmitted
					*/
					DL_I2C_transmitTargetData(config->base, 0x00);
				}
			} else {
				/* read_requested function is not found. The target data will
				 * continue to transmit to fulfill the error and not hang
				 * the controller by stretching indefinitely */
				DL_I2C_transmitTargetDataCheck(config->base, 0xFF);
				data->target_tx_valid = -1;
			}
		} else {
			/* still using the FIFO, we call read_processed in order to add
			* additional data rather than from a buffer. If the write-received
			* function chooses to return 0 (no more data present), then 0's will
			* be filled in
			*/
			if (data->target_callbacks->read_processed != NULL) {
				uint8_t nextByte;

				if (data->target_tx_valid == 0) {
					data->target_tx_valid = data->target_callbacks->read_processed(
						data->target_config, &nextByte);
				}

				if (data->target_tx_valid == 0) {
					DL_I2C_transmitTargetData(config->base, nextByte);
				} else {
					/* In this case, no new data is desired to be filled, thus
					* 0's are transmitted
					*/
					DL_I2C_transmitTargetData(config->base, 0x00);
				}
			} else {
				/* read_processed function is not found. The target data will
				 * continue to transmit to fulfill the error and not hang
				 * the controller by stretching indefinitely */
				DL_I2C_transmitTargetDataCheck(config->base, 0xFF);
				data->target_tx_valid = -1;
			}
		}
		break;
	case DL_I2C_IIDX_TARGET_STOP:
		data->state = I2C_MSPM0_IDLE;
		k_sem_give(&data->i2c_busy_sem);
		if (data->target_callbacks->stop) {
			data->target_callbacks->stop(data->target_config);
		}
		break;
	/* Not implemented */
	case DL_I2C_IIDX_TARGET_RXFIFO_TRIGGER:
	case DL_I2C_IIDX_TARGET_RXFIFO_FULL:
	case DL_I2C_IIDX_TARGET_GENERAL_CALL:
	case DL_I2C_IIDX_TARGET_EVENT1_DMA_DONE:
	case DL_I2C_IIDX_TARGET_EVENT2_DMA_DONE:
		break;
	/* Timeout Interrupts */
	case DL_I2C_IIDX_TIMEOUT_A:
		data->state = I2C_MSPM0_TIMEOUT;

		if(!data->is_target){
			// Controller behavior
			DL_I2C_disableInterrupt(config->base, TI_MSPM0_CONTROLLER_INTERRUPTS);
			DL_I2C_clearInterruptStatus(config->base, TI_MSPM0_CONTROLLER_INTERRUPTS);
			DL_I2C_flushControllerTXFIFO(config->base);

		} else {
			// Target Behavior
			data->target_config->flags |= I2C_TARGET_FLAGS_ERROR_TIMEOUT;

			/* the event based notify will be done using a stop condition,
				* as there is not another known way to notify the application that a
				* timeout has occurred, so we set a custom flag that the application
				* must check.
				*/
			DL_I2C_disableInterrupt(config->base, TI_MSPM0_TARGET_INTERRUPTS);
			DL_I2C_clearInterruptStatus(config->base, TI_MSPM0_TARGET_INTERRUPTS);

			if (data->target_callbacks->stop) {
				int stopReturn = data->target_callbacks->stop(data->target_config);
				if (stopReturn < 0){
					/* Allow stop to determine whether the target is reset */
					i2c_mspm0_reset_peripheral_target(dev);
				}
			} else {
				/* if no stop, just reset anyways */
				i2c_mspm0_reset_peripheral_target(dev);
			}
			k_sem_give(&data->i2c_busy_sem);
		}
		break;
	default:
		break;
	}
}
